[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/game/balloon/balloon.png" type="Texture" id=1]
[ext_resource path="res://asset/game/balloon/balloon.gd" type="Script" id=2]
[ext_resource path="res://asset/game/balloon/smile_4.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 78.5304

[node name="balloon" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.06066, 11.3137 )
texture = ExtResource( 1 )
flip_h = true
region_rect = Rect2( 0, 0, 22, 44 )

[node name="Sprite" type="Sprite" parent="Sprite"]
position = Vector2( -0.594603, -13.3786 )
scale = Vector2( 0.890593, 0.890593 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.52972, -8.3191 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="." to="." method="_on_balloon_input_event"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
